--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -1,12 +1,11 @@
 
-if(ECM_FOUND)
-  # Logging for Marble plugins
-  ecm_qt_export_logging_category(
+# Logging for Marble plugins
+ecm_qt_export_logging_category(
     IDENTIFIER "MARBLE_PLUGINS"
     CATEGORY_NAME "marble_plugins"
     EXPORT marble
-    DESCRIPTION "Marble (plugins)")
-endif()
+    DESCRIPTION "Marble (plugins)"
+)
 add_definitions("-DLOGGING_IDENTIFIER=MARBLE_PLUGINS")
 
 if(NOT ANDROID)
