--- a/src/lib/marble/CMakeLists.txt
+++ b/src/lib/marble/CMakeLists.txt
@@ -376,14 +376,13 @@ add_library(marblewidget ${marblewidget_SRCS} ${SOURCES_UI_HDRS})
 
 generate_export_header(marblewidget BASE_NAME marble)
 
-if(ECM_FOUND)
-  # Logging for the Marble library
-  ecm_qt_export_logging_category(
+# Logging for the Marble library
+ecm_qt_export_logging_category(
     IDENTIFIER "MARBLE_LIB"
     CATEGORY_NAME "marble_lib"
     EXPORT marble
-    DESCRIPTION "Marble (library)")
-endif()
+    DESCRIPTION "Marble (library)"
+)
 add_definitions("-DLOGGING_IDENTIFIER=MARBLE_LIB")
 
 # link with libastro
