--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ include:
     - /gitlab-templates/freebsd-qt6.yml
     - /gitlab-templates/windows-qt6.yml
     - /gitlab-templates/flatpak.yml
+    - /gitlab-templates/clang-format.yml
 
 # Manual job for building of maps.kde.org binaries
 maps-kde-org-binaries:
