--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set (RELEASE_SERVICE_VERSION_MINOR "11")
 set (RELEASE_SERVICE_VERSION_MICRO "70")
 set (RELEASE_SERVICE_VERSION "${RELEASE_SERVICE_VERSION_MAJOR}.${RELEASE_SERVICE_VERSION_MINOR}.${RELEASE_SERVICE_VERSION_MICRO}")
 
+set(MARBLE_LIB_SOVERSION 28)
+
 project(marble VERSION ${RELEASE_SERVICE_VERSION})
 
 set(KF_MIN_VERSION "6.5.0")
@@ -44,7 +46,8 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 ecm_setup_version(${RELEASE_SERVICE_VERSION}
     VARIABLE_PREFIX MARBLE
-    VERSION_HEADER ${CMAKE_CURRENT_BINARY_DIR}/marble-version.h
+    VERSION_HEADER ${CMAKE_CURRENT_BINARY_DIR}/src/lib/marble/marble_version.h
+    SOVERSION 28
 )
 
 remove_definitions(-DQT_NO_CAST_FROM_ASCII -DQT_NO_KEYWORDS)
