astro: fix location of version file

--- a/src/lib/astro/CMakeLists.txt
+++ b/src/lib/astro/CMakeLists.txt
@@ -19,7 +19,7 @@ SET(astrolib_SRCS
 
 ecm_setup_version(${RELEASE_SERVICE_VERSION}
     VARIABLE_PREFIX ASTRO
-    VERSION_HEADER ${CMAKE_CURRENT_BINARY_DIR}/astro-version.h
+    VERSION_HEADER ${CMAKE_CURRENT_BINARY_DIR}/astro_version.h
     SOVERSION 1
 )
 
