--- a/src/apps/behaim/CMakeLists.txt
+++ b/src/apps/behaim/CMakeLists.txt
@@ -3,13 +3,20 @@
 
 add_executable(marble-behaim main.cpp)
 
-target_link_libraries(marble-behaim PUBLIC marbledeclarative)
+target_link_libraries(marble-behaim PUBLIC Qt::Quick Qt::Widgets)
+
+if(NOT MARBLE_NO_WEBKITWIDGETS)
+    target_link_libraries(marble-behaim PUBLIC Qt::WebEngineQuick)
+    add_definitions(-DMARBLE_WEBKITWIDGETS=1)
+endif()
 
 qt_add_qml_module(marble-behaim
     URI org.kde.marble.behaim
     QML_FILES
         MainScreen.qml
         Legend.qml
+    DEPENDENCIES
+        org.kde.marble
 )
 
 install(TARGETS marble-behaim ${KDE_INSTALL_TARGETS_DEFAULT_ARGS})
