tests: Enable tests in the CI
- Use standard BUILD_TESTING cmake conf to control whether or not to
  build the unit tests
- Fix broken unit tests caused by an infinite recursion in the ==
  operator
- Disable TestGeoDataPack tests for now
- Use ecm_add_test to registers the tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ include(KDEClangFormat)
 include(KDEGitCommitHooks)
 
 include(ECMSetupVersion)
+include(ECMAddTests)
 include(ECMInstallIcons)
 include(ECMEnableSanitizers)
 include(ECMCoverageOption)
@@ -80,7 +81,6 @@ find_package(Qt6 ${QT_MIN_VERSION} REQUIRED
         Core
         Xml
         Network
-        Test
         Widgets
         Svg
         SvgWidgets
@@ -90,6 +90,10 @@ find_package(Qt6 ${QT_MIN_VERSION} REQUIRED
         PrintSupport
         Core5Compat
 )
+
+if (BUILD_TESTING)
+    find_package(Qt6 ${QT_MIN_VERSION} REQUIRED COMPONENTS Test)
+endif()
 
 find_package(KF6 ${KF_MIN_VERSION} COMPONENTS CoreAddons I18n)
 if (NOT ANDROID)
@@ -142,15 +146,6 @@ endif( WIN32 )
 
 INCLUDE (CTest)
 ENABLE_TESTING()
-
-option( BUILD_MARBLE_TESTS "Build unit tests" OFF )
-add_feature_info("Unit tests" BUILD_MARBLE_TESTS "Build unit tests. Toggle with BUILD_MARBLE_TESTS=YES/NO. 'make test' will run all.")
-
-if( BUILD_MARBLE_TESTS )
-#  SET (TEST_DATA_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/tests/test_data")
-  #where unit test binaries should be installed to and run from
-#  SET (MARBLE_TEST_DIR   ${CMAKE_CURRENT_BINARY_DIR}/tests)
-endif( BUILD_MARBLE_TESTS )
 
 ####################################################
 set (PEDANTIC FALSE CACHE BOOL "Determines if we should compile with -Wall -Werror.")
@@ -316,7 +311,9 @@ add_subdirectory(data)
 
 include(DistTarget)
 
-add_subdirectory(tests)
+if (BUILD_TESTING)
+    add_subdirectory(tests)
+endif()
 
 option(BUILD_MARBLE_TOOLS "Build various tools related to Marble" OFF)
 add_feature_info("Marble tools" BUILD_MARBLE_TOOLS "Build various Marble tools for e.g. file format conversion. Toggle with BUILD_MARBLE_TOOLS=YES/NO.")
