--- a/src/apps/marble-maps/org.kde.marble.maps.desktop
+++ b/src/apps/marble-maps/org.kde.marble.maps.desktop
@@ -114,5 +114,5 @@ Comment[uk]=Знайдіть ваш шлях
 Comment[x-test]=xxFind your wayxx
 Comment[zh_CN]=查找路线
 Comment[zh_TW]=找到您的路
-Icon=org.kde.marble.map
+Icon=org.kde.marble.maps
 Categories=Qt;KDE;Education;Geoscience;Geography;Science;Maps;
