--- a/src/plasmarunner/CMakeLists.txt
+++ b/src/plasmarunner/CMakeLists.txt
@@ -1,26 +1,17 @@
 project(MarblePlasmaRunner)
 
-macro_optional_find_package(KF6 ${REQUIRED_KF6_MIN_VERSION} QUIET COMPONENTS Runner I18n)
+macro_optional_find_package(KF6 ${KF_MIN_VERSION} QUIET COMPONENTS Runner I18n)
 
 if(NOT KF6_FOUND)
   return()
 endif()
 
-set(plasmaRunner_SRCS
-  main.cpp
-  plasmarunner.cpp
-)
+kcoreaddons_add_plugin(plasma_runner_marble INSTALL_NAMESPACE "kf6/krunner")
 
-add_library(plasma_runner_marble MODULE ${plasmaRunner_SRCS})
+target_sources(plasma_runner_marble PRIVATE plasmarunner.cpp)
+
 target_link_libraries(plasma_runner_marble
   marblewidget
   KF6::Runner
   KF6::I18n
 )
-
-install(TARGETS plasma_runner_marble DESTINATION ${KDE_INSTALL_PLUGINDIR}/kf5/krunner)
-if(KF6Runner_VERSION VERSION_LESS 5.72.0)
-  install(FILES plasma-runner-marble.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR})
-else()
-  kcoreaddons_desktop_to_json(plasma_runner_marble plasma-runner-marble.desktop)
-endif()
