--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -87,6 +87,6 @@ ecm_qt_install_logging_categories(
     DESTINATION "${KDE_INSTALL_LOGGINGCATEGORIESDIR}"
 )
 
-#add_subdirectory( plasma )
-#add_subdirectory( plasmarunner )
-add_subdirectory( thumbnailer )
+add_subdirectory(plasma)
+add_subdirectory(plasmarunner)
+add_subdirectory(thumbnailer)
