--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -1,7 +1,10 @@
 if(BUILD_MARBLE_APPS)
     if (NOT ANDROID)
         add_subdirectory(marble-ui)
-        if (TARGET KF6::Parts)
+        if (BUILD_QT_AND_KDE)
+            add_subdirectory(marble-kde)
+            add_subdirectory(marble-qt)
+        elseif (TARGET KF6::Parts)
             add_subdirectory(marble-kde)
         else()
             add_subdirectory(marble-qt)
