ci: Add Kparts dependency

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -12,6 +12,7 @@ Dependencies:
     'frameworks/kcoreaddons': '@stable-kf6'
     'frameworks/knewstuff': '@stable-kf6'
     'frameworks/kconfig': '@stable-kf6'
+    'frameworks/kparts': '@stable-kf6'
 
 Options:
  cmake-options: "-DBUILD_MARBLE_TOOLS=ON"
