--- a/src/plasmarunner/CMakeLists.txt
+++ b/src/plasmarunner/CMakeLists.txt
@@ -8,7 +8,7 @@ endif()
 
 kcoreaddons_add_plugin(plasma_runner_marble INSTALL_NAMESPACE "kf6/krunner")
 
-target_sources(plasma_runner_marble PRIVATE plasmarunner.cpp)
+target_sources(plasma_runner_marble PRIVATE plasmarunner.cpp plasmarunner.h)
 
 target_link_libraries(plasma_runner_marble
   marblewidget
